Bug 1454625 - Schedule settings update before setting mImage. r=padenot

MozReview-Commit-ID: 9IasAgJImuI